src/Editor.css
.editor {
  width: 100%;
  display: flex;
  flex-direction: column;
  background-color: rgba(152, 181, 236, 0.1);
}
.editor .tab-bar {
  background-color: #eee;
  height: 40px;
  display: flex;
  overflow-x: auto;
  position: relative;
}
.editor .tab-bar::-webkit-scrollbar {
  opacity: 0;
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}
.editor .tab-bar div {
  padding: 10px;
  padding-right: 25px;
  width: fit-content;
  max-width: 300px;
  overflow: hidden;
  text-overflow: ellipsis;
  background-color: rgb(157, 178, 216, 0.3);
  flex-shrink: 0;
  position: relative;
  border-right: solid 1px #777;
  user-select: none;
  cursor: pointer;
  text-wrap: nowrap;
}
.editor .tab-bar div img {
  width: 20px;
  position: absolute;
  right: 3px;
  top: 50%;
  transform: translateY(-50%);
}
.editor .tab-bar .unsaved {
  background-color: rgba(216, 157, 157, 0.3);
}
.editor .tab-bar .unsaved[class*="current-tab"] {
  background-color: rgba(216, 207, 157, 0.5);
}
.editor input {
  font-size: 28px;
  border: none;
  border-top: solid 1px #777;
  outline: none;
  padding: 8px;
}
.editor textarea {
  resize: none;
  width: 100%;
  padding: 8px;
  border: none;
  outline: none;
  height: calc(100% - 40px);
  border-top: solid 1px #777;
  font-size: 18px;
  position: relative;
}

.editor .tab-bar .current-tab {
  background-color: #eee;
}

.save-button {
  width: 65px;
  height: 45px;
  padding: 12px;
  font-size: 18px;
  font-weight: bold;
  background-color: rgb(82, 120, 192);
  color: beige;
  text-align: center;
  position: absolute;
  right: 14px;
  bottom: 14px;
  border-radius: 6px;
  border: none;
  outline: none;
  cursor: pointer;
}
.save-button.mobile {
  top: 36px;
  right: 0;
  height: 49px;
  width: calc(100% - 50px);
  border-radius: 0;
}

.editor .add-tab {
  position: relative;
  padding: 0 !important;
  width: 40px !important;
  padding: 10px !important;
  border: none !important;
  background: unset !important;
  border: solid 2px silver;
  background-color: #f8f8f8 !important;
  box-shadow: 0 0 5px rgb(0, 0, 0, 0.3);
}
.add-tab .plus {
  position: absolute;
  width: 20px;
  height: 4px;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.tab-bar .xmark {
  right: 12.5px;
  top: 13px;
}

